<resources>
    <string name="app_name">ChatApp</string>
    <string name="createNewAccount">Create New Account</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="phoneEmail">Email</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create New Account</string>
    <string name="textViewSignIn">You will not creating a facebook Profile</string>
    <string name="forget_password">Forget Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>